--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "expo-image-picker": "~16.1.4",
-    "expo-video": "~2.2.2"
+    "expo-video": "~2.2.2",
+    "expo-camera": "~16.1.11",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-file-system": "~18.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
