--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "expo-video": "~2.2.2",
     "expo-camera": "~16.1.11",
     "expo-image-manipulator": "~13.1.7",
-    "expo-file-system": "~18.1.11"
+    "expo-file-system": "~18.1.11",
+    "expo-media-library": "~17.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
